// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreatePolicyModal /> spec renders the component 1`] = `
<div
  class="euiOverlayMask euiOverlayMask--aboveHeader"
>
  <div
    aria-hidden="true"
    data-aria-hidden="true"
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      class="euiModal"
      style="max-width: 600px;"
      tabindex="0"
    >
      <button
        aria-label="Closes this modal window"
        class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiModal__closeIcon"
        type="button"
      >
        EuiIconMock
      </button>
      <div
        class="euiModal__flex"
      >
        <div
          class="euiModalHeader"
        >
          <div
            class="euiModalHeader__title"
          >
            Configuration method
          </div>
        </div>
        <div
          class="euiModalBody"
        >
          <div
            class="euiModalBody__overflow"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--directionColumn euiFlexGroup--responsive"
              style="margin: -4px;"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiText euiText--small"
                  style="margin-top: 0px;"
                >
                  Choose how you would like to 
                  define
                   your policy, either using a visual editor or writing JSON.
                </div>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <div
                    class="euiFlexItem"
                  >
                    <div
                      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow selected-radio-panel"
                    >
                      <div
                        class="euiFormRow"
                        id="some_html_id-row"
                      >
                        <div
                          class="euiFormRow__fieldWrapper"
                        >
                          <div
                            aria-describedby="some_html_id-help-0"
                            class="euiRadio"
                            data-test-subj="createPolicyModalVisualRadio"
                          >
                            <input
                              checked=""
                              class="euiRadio__input"
                              id="some_html_id"
                              type="radio"
                              value=""
                            />
                            <div
                              class="euiRadio__circle"
                            />
                            <label
                              class="euiRadio__label"
                              for="some_html_id"
                            >
                              Visual editor
                            </label>
                          </div>
                          <div
                            class="euiFormHelpText euiFormRow__text"
                            id="some_html_id-help-0"
                          >
                            Use the visual editor to create your policy using pre-defined options.
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiFlexItem"
                  >
                    <div
                      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
                    >
                      <div
                        class="euiFormRow"
                        id="some_html_id-row"
                      >
                        <div
                          class="euiFormRow__fieldWrapper"
                        >
                          <div
                            aria-describedby="some_html_id-help-0"
                            class="euiRadio"
                            data-test-subj="createPolicyModalJsonRadio"
                          >
                            <input
                              class="euiRadio__input"
                              id="some_html_id"
                              type="radio"
                              value=""
                            />
                            <div
                              class="euiRadio__circle"
                            />
                            <label
                              class="euiRadio__label"
                              for="some_html_id"
                            >
                              JSON editor
                            </label>
                          </div>
                          <div
                            class="euiFormHelpText euiFormRow__text"
                            id="some_html_id-help-0"
                          >
                            Use the JSON editor to create or import your policy using JSON.
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiModalFooter"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <button
                class="euiButtonEmpty euiButtonEmpty--primary"
                data-test-subj="createPolicyModalCancelButton"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonEmpty__text"
                  >
                    Cancel
                  </span>
                </span>
              </button>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <button
                class="euiButton euiButton--primary euiButton--fill"
                data-test-subj="createPolicyModalContinueButton"
                type="button"
              >
                <span
                  class="euiButtonContent euiButton__content"
                >
                  <span
                    class="euiButton__text"
                  >
                    Continue
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    data-aria-hidden="true"
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;

exports[`<CreatePolicyModal /> spec renders the component w/ edit 1`] = `
<div
  class="euiOverlayMask euiOverlayMask--aboveHeader"
>
  <div
    aria-hidden="true"
    data-aria-hidden="true"
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      class="euiModal"
      style="max-width: 600px;"
      tabindex="0"
    >
      <button
        aria-label="Closes this modal window"
        class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiModal__closeIcon"
        type="button"
      >
        EuiIconMock
      </button>
      <div
        class="euiModal__flex"
      >
        <div
          class="euiModalHeader"
        >
          <div
            class="euiModalHeader__title"
          >
            Configuration method
          </div>
        </div>
        <div
          class="euiModalBody"
        >
          <div
            class="euiModalBody__overflow"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--directionColumn euiFlexGroup--responsive"
              style="margin: -4px;"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiText euiText--small"
                  style="margin-top: 0px;"
                >
                  Choose how you would like to 
                  modify
                   your policy, either using a visual editor or writing JSON.
                </div>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <div
                    class="euiFlexItem"
                  >
                    <div
                      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow selected-radio-panel"
                    >
                      <div
                        class="euiFormRow"
                        id="some_html_id-row"
                      >
                        <div
                          class="euiFormRow__fieldWrapper"
                        >
                          <div
                            aria-describedby="some_html_id-help-0"
                            class="euiRadio"
                            data-test-subj="createPolicyModalVisualRadio"
                          >
                            <input
                              checked=""
                              class="euiRadio__input"
                              id="some_html_id"
                              type="radio"
                              value=""
                            />
                            <div
                              class="euiRadio__circle"
                            />
                            <label
                              class="euiRadio__label"
                              for="some_html_id"
                            >
                              Visual editor
                            </label>
                          </div>
                          <div
                            class="euiFormHelpText euiFormRow__text"
                            id="some_html_id-help-0"
                          >
                            Use the visual editor to update your policy
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiFlexItem"
                  >
                    <div
                      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
                    >
                      <div
                        class="euiFormRow"
                        id="some_html_id-row"
                      >
                        <div
                          class="euiFormRow__fieldWrapper"
                        >
                          <div
                            aria-describedby="some_html_id-help-0"
                            class="euiRadio"
                            data-test-subj="createPolicyModalJsonRadio"
                          >
                            <input
                              class="euiRadio__input"
                              id="some_html_id"
                              type="radio"
                              value=""
                            />
                            <div
                              class="euiRadio__circle"
                            />
                            <label
                              class="euiRadio__label"
                              for="some_html_id"
                            >
                              JSON editor
                            </label>
                          </div>
                          <div
                            class="euiFormHelpText euiFormRow__text"
                            id="some_html_id-help-0"
                          >
                            Use the JSON editor to update your policy using JSON.
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiModalFooter"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <button
                class="euiButtonEmpty euiButtonEmpty--primary"
                data-test-subj="createPolicyModalCancelButton"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonEmpty__text"
                  >
                    Cancel
                  </span>
                </span>
              </button>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <button
                class="euiButton euiButton--primary euiButton--fill"
                data-test-subj="createPolicyModalContinueButton"
                type="button"
              >
                <span
                  class="euiButtonContent euiButton__content"
                >
                  <span
                    class="euiButton__text"
                  >
                    Continue
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    data-aria-hidden="true"
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;
